<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Seelah</string>
    <string name="blessing_label">B</string>
    <string name="cure_label">C</string>
    <string name="spell_label">S</string>
    <string name="other_label">-</string>
    <string name="unknown_percent">%1$s%%</string>
    <string name="acquire">Acquire</string>
    <string name="draw">Draw</string>
    <string name="unknown_label">\?</string>
    <string name="identify">Identify…</string>
    <string name="blessing">Blessing</string>
    <string name="cure">Cure</string>
    <string name="spell">Spell</string>
    <string name="other">Other</string>
    <string name="paula">Paula</string>
    <string name="discard">Discard</string>
    <string name="recharge">Recharge</string>
    <string name="remove">Remove</string>
    <string name="action">Action…</string>
    <string name="change_type">Change Type</string>
    <string name="add_to_hand">Add to Hand</string>
    <string name="discard_pile">Discard Pile</string>
    <string name="activate">Activate</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="cure_recharged_question">Cure recharged?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
