<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:id="@+id/discard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="15dip"
        android:background="@drawable/unknown_card_background"
        android:text="@string/discard"/>

    <TextView
        android:id="@+id/recharge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="15dip"
        android:background="@drawable/unknown_card_background"
        android:text="@string/recharge"/>

    <TextView
        android:id="@+id/remove"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="15dip"
        android:background="@drawable/unknown_card_background"
        android:text="@string/remove"/>

    <TextView
        android:id="@+id/change_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="15dip"
        android:background="@drawable/unknown_card_background"
        android:text="@string/change_type"/>

</LinearLayout>